--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
     sdk: flutter
   google_fonts: ^0.4.0
   http: ^0.12.0+4
+  flutter_platform_widgets: ^0.32.5
 
   cupertino_icons: ^0.1.3
 
